# lets_be_rational

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: dummy-config.cmake.in
include/: lets_be_rational.h
lets_be_rational/: dllmain.h  lets_be_rational.cpp  normaldistribution.h
src/: normaldistribution.cpp
utils/: unicode_mapper.py
